randomize array, check data char value
Basic randomize arrray items setup.
Attributes of fronend items identified on click.

--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
   <b id="success-attempt">__ __ __ __ __ </b>
 </section>
 
-  <div class="keyboard">
+  <div id="keyboard" class="keyboard">
     <div class="kr1">
-    <p>q</p>
-    <p>w</p>
-    <p>e</p>
-    <p>r</p>
-    <p>t</p>
-    <p>y</p>
-    <p>u</p>
-    <p>i</p>
-    <p>o</p>
-    <p>p</p>
+    <p data-char"q">q</p>
+    <p data-char"w">w</p>
+    <p data-char"e">e</p>    
+    <p data-char"r">r</p>
+    <p data-char"t">t</p>
+    <p data-char"y">y</p>
+    <p data-char"u">u</p>
+    <p data-char"i">i</p>
+    <p data-char"o">o</p>
+    <p data-char"p">p</p>
    </div>
    <div class="kr2">
-     <p>a</p>
-     <p>s</p>
-     <p>d</p>
-     <p>f</p>
-     <p>g</p>
-     <p>h</p>
-     <p>j</p>
-     <p>k</p>
-     <p>l</p>
+     <p data-char"a">a</p>
+     <p data-char"s">s</p>
+     <p data-char"d">d</p>
+     <p data-char"f">f</p>
+     <p data-char"g">g</p>
+     <p data-char"h">h</p>
+     <p data-char"j">j</p>
+     <p data-char"k">k</p>
+     <p data-char"l">l</p>
    </div>
    <div class="kr3">
-     <p>z</p>
-     <p>x</p>
-     <p>c</p>
-     <p>v</p>
-     <p>b</p>
-     <p>n</p>
-     <p>m</p>
+     <p data-char"z">z</p>
+     <p data-char"x">x</p>
+     <p data-char"c">c</p>
+     <p data-char"v">v</p>
+     <p data-char"b">b</p>
+     <p data-char"n">n</p>
+     <p data-char"m">m</p>
    </div>
  
   <footer>
