put secret in frontend
intend to conceal, somehow

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </div>
 </main>
 
-<section>
-  <b id="success-attempt">__ __ __ __ __ </b>
+<section class="secretword">
+ <p id="success-attempt"></p> 
 </section>
 
   <div id="keyboard" class="keyboard">
