assign unique attr to element
Each secret words’ data-char attribute.

--- a/index.html
+++ b/index.html
@@ -27,41 +27,42 @@
 </main>
 
 <section class="secretword">
- <p id="success-attempt"></p> 
+  <ul id="success-attempt"></ul>
+ 
 </section>
 
   <div id="keyboard" class="keyboard">
     <div class="kr1">
-    <p data-char"q">q</p>
-    <p data-char"w">w</p>
-    <p data-char"e">e</p>    
-    <p data-char"r">r</p>
-    <p data-char"t">t</p>
-    <p data-char"y">y</p>
-    <p data-char"u">u</p>
-    <p data-char"i">i</p>
-    <p data-char"o">o</p>
-    <p data-char"p">p</p>
+    <p data-char="q">q</p>
+    <p data-char="w">w</p>
+    <p data-char="e">e</p>    
+    <p data-char="r">r</p>
+    <p data-char="t">t</p>
+    <p data-char="y">y</p>
+    <p data-char="u">u</p>
+    <p data-char="i">i</p>
+    <p data-char="o">o</p>
+    <p data-char="p">p</p>
    </div>
    <div class="kr2">
-     <p data-char"a">a</p>
-     <p data-char"s">s</p>
-     <p data-char"d">d</p>
-     <p data-char"f">f</p>
-     <p data-char"g">g</p>
-     <p data-char"h">h</p>
-     <p data-char"j">j</p>
-     <p data-char"k">k</p>
-     <p data-char"l">l</p>
+     <p data-char="a">a</p>
+     <p data-char="s">s</p>
+     <p data-char="d">d</p>
+     <p data-char="f">f</p>
+     <p data-char="g">g</p>
+     <p data-char="h">h</p>
+     <p data-char="j">j</p>
+     <p data-char="k">k</p>
+     <p data-char="l">l</p>
    </div>
    <div class="kr3">
-     <p data-char"z">z</p>
-     <p data-char"x">x</p>
-     <p data-char"c">c</p>
-     <p data-char"v">v</p>
-     <p data-char"b">b</p>
-     <p data-char"n">n</p>
-     <p data-char"m">m</p>
+     <p data-char="z">z</p>
+     <p data-char="x">x</p>
+     <p data-char="c">c</p>
+     <p data-char="v">v</p>
+     <p data-char="b">b</p>
+     <p data-char="n">n</p>
+     <p data-char="m">m</p>
    </div>
  
   <footer>
