show letter on click
shows character if in secret word.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <div class="wrap">
 <h1>hang man</h1>
 <main class="parts">
   <div id="head" class="b-parts">
@@ -28,7 +29,6 @@
 
 <section class="secretword">
   <ul id="success-attempt"></ul>
- 
 </section>
 
   <div id="keyboard" class="keyboard">
@@ -70,6 +70,7 @@
       <button>Next Word</button>
   </footer>
 </div> 
+</div> <!-- wrap -->
 <script src="js/main.js"></script>  
 </body>
 </html>
