--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
  
   <footer>
    
-      <button>Next Word</button>
+      <button id="nextword">Next Word</button>
   </footer>
 </div> 
 </div> <!-- wrap -->
