fix win-lose msg

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section>
   <aside id="dialog" class="hidden">
     <p class="dialog-msg"></p>
-    <button class="try-again">Try again</button>
+    <button class="try-again">Play again</button>
   </aside>
 </section>
 <section class="secretword">
